# otus-kafka-2025

./: README.md
final_project/: .gitignore  Dockerfile  README.md  docker-compose-kafka.yml  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
final_project/indexer/: __init__.py  main.py
final_project/shared/: __init__.py  models.py
final_project/shared/queue/: __init__.py  kafka_adapter.py  redis_adapter.py
final_project/slack_bot/: README.md  app.py  config.py  formatters.py  handlers.py  health.py  listeners.py  main.py  middleware.py  redis_client.py
final_project/workers/: README.md  __init__.py  communicator.py  config.py  main.py  orchestrator.py
final_project/workers/graphs/: README.md  __init__.py  base.py  context.py  execution.py  main.py  sql.py
final_project/workers/tools/: README.md  __init__.py  bigquery.py  rag.py
final_project/workers/utils/: report_generator.py  session.py
hm_3/: docker-compose.yml
hw_1/: README.md  simple_consumer.py  simple_producer.py
hw_2/: README.md  docker-compose-acl.yml  docker-compose-kraft.yml  setup-acl.sh  setup.sh  test-acl.sh
hw_2/config/: kafka.properties  kafka_server_jaas.conf
hw_2/scripts/: restricted.properties
hw_2/security/: kafka-server.jaas
hw_3/: README.md  consumer.py  producer.py
hw_4/: README.md  docker-compose.yml  kafka_streams_app.py  test_producer.py
hw_5/: .gitignore  README.md  build.sbt  docker-compose.yml  run.sh  setup.sh
hw_5/project/: plugins.sbt
hw_5/src/main/resources/: logback.xml
hw_5/src/main/scala/: AkkaKafkaStreamApp.scala  AkkaStreamGraphApp.scala  OutputTopicReader.scala
hw_6/: .gitignore  README.md  cleanup.sh  demo.sh  docker-compose.yml  setup.sh  test.sh
hw_6/connectors/: postgres-connector.json
hw_6/sql/: init.sql
